// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders AccountMenuItems when the user is signed in 1`] = `
<aside>
  <AccountMenuItems
    handleSignOut={[MockFunction handleSignOut]}
  />
</aside>
`;

exports[`it renders SignIn component when the view is SIGNIN 1`] = `
<aside>
  <Singin Component />
</aside>
`;

exports[`it renders forgot password component when the view is CREATE_ACCOUNT 1`] = `
<aside>
  <div>
    To be handled in PWA-804
  </div>
</aside>
`;

exports[`it renders forgot password component when the view is FORGOT_PASSWORD 1`] = `
<aside>
  <div>
    To be handled in PWA-77
  </div>
</aside>
`;
